# waves_particles

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
res/: shader.wgsl
src/: main.rs  spell_card.rs
