[package]
name = "waves_particles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
wgpu = "0.16"
anyhow = "*"
clap = { version = "*", features = ["derive"] }
pollster = "*"
bytemuck = "*"
gif = "*"